--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/eldemonstro/discordbot#readme",
   "dependencies": {
     "discord.js": "^11.0.0",
+    "ejs": "^2.5.6",
     "express": "^4.15.2"
   }
 }
